--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,28 @@
+attrs==20.3.0
 autopep8==1.5.4
 certifi==2020.12.5
 chardet==4.0.0
 click==7.1.2
 croniter==1.0.1
 Flask==1.1.2
+flask-expects-json==1.5.0
 idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
+jsonschema==3.2.0
 MarkupSafe==1.1.1
 natsort==7.1.0
-pgpubsub==0.0.5
-pika==1.1.0
 psycopg2==2.8.6
 pycodestyle==2.6.0
+pymongo==3.11.2
+pyrsistent==0.17.3
 python-dateutil==2.8.1
+python-http-client==3.3.1
 requests==2.25.1
 schedule==0.6.0
+sendgrid==6.5.0
 six==1.15.0
+starkbank-ecdsa==1.1.0
 toml==0.10.2
 urllib3==1.26.2
 Werkzeug==1.0.1
